// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`unified-latex-util-argspec > parses xparse argument specification string "!o r() m" 1`] = `
[
  {
    "closeBrace": "]",
    "noLeadingWhitespace": true,
    "openBrace": "[",
    "type": "optional",
  },
  {
    "closeBrace": ")",
    "openBrace": "(",
    "type": "mandatory",
  },
  {
    "closeBrace": "}",
    "openBrace": "{",
    "type": "mandatory",
  },
]
`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "" 1`] = `[]`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "O{nested{defaults}}" 1`] = `
[
  {
    "closeBrace": "]",
    "defaultArg": {
      "content": [
        "n",
        "e",
        "s",
        "t",
        "e",
        "d",
        {
          "content": [
            "d",
            "e",
            "f",
            "a",
            "u",
            "l",
            "t",
            "s",
          ],
          "type": "group",
        },
      ],
      "type": "group",
    },
    "openBrace": "[",
    "type": "optional",
  },
]
`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "O{somedefault} m o" 1`] = `
[
  {
    "closeBrace": "]",
    "defaultArg": {
      "content": [
        "s",
        "o",
        "m",
        "e",
        "d",
        "e",
        "f",
        "a",
        "u",
        "l",
        "t",
      ],
      "type": "group",
    },
    "openBrace": "[",
    "type": "optional",
  },
  {
    "closeBrace": "}",
    "openBrace": "{",
    "type": "mandatory",
  },
  {
    "closeBrace": "]",
    "openBrace": "[",
    "type": "optional",
  },
]
`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "d++ D--{def}" 1`] = `
[
  {
    "closeBrace": "+",
    "openBrace": "+",
    "type": "optional",
  },
  {
    "closeBrace": "-",
    "defaultArg": {
      "content": [
        "d",
        "e",
        "f",
      ],
      "type": "group",
    },
    "openBrace": "-",
    "type": "optional",
  },
]
`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "m e{^}" 1`] = `
[
  {
    "closeBrace": "}",
    "openBrace": "{",
    "type": "mandatory",
  },
  {
    "embellishmentTokens": [
      "^",
    ],
    "type": "embellishment",
  },
]
`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "m e{_^}" 1`] = `
[
  {
    "closeBrace": "}",
    "openBrace": "{",
    "type": "mandatory",
  },
  {
    "embellishmentTokens": [
      "_",
      "^",
    ],
    "type": "embellishment",
  },
]
`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "m ta o o" 1`] = `
[
  {
    "closeBrace": "}",
    "openBrace": "{",
    "type": "mandatory",
  },
  {
    "token": "a",
    "type": "optionalToken",
  },
  {
    "closeBrace": "]",
    "openBrace": "[",
    "type": "optional",
  },
  {
    "closeBrace": "]",
    "openBrace": "[",
    "type": "optional",
  },
]
`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "o m o !o m" 1`] = `
[
  {
    "closeBrace": "]",
    "openBrace": "[",
    "type": "optional",
  },
  {
    "closeBrace": "}",
    "openBrace": "{",
    "type": "mandatory",
  },
  {
    "closeBrace": "]",
    "openBrace": "[",
    "type": "optional",
  },
  {
    "closeBrace": "]",
    "noLeadingWhitespace": true,
    "openBrace": "[",
    "type": "optional",
  },
  {
    "closeBrace": "}",
    "openBrace": "{",
    "type": "mandatory",
  },
]
`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "o m" 1`] = `
[
  {
    "closeBrace": "]",
    "openBrace": "[",
    "type": "optional",
  },
  {
    "closeBrace": "}",
    "openBrace": "{",
    "type": "mandatory",
  },
]
`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "s m" 1`] = `
[
  {
    "type": "optionalStar",
  },
  {
    "closeBrace": "}",
    "openBrace": "{",
    "type": "mandatory",
  },
]
`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "u;" 1`] = `
[
  {
    "stopTokens": [
      ";",
    ],
    "type": "until",
  },
]
`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "u{ }" 1`] = `
[
  {
    "stopTokens": [
      " ",
    ],
    "type": "until",
  },
]
`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "u{xx;}" 1`] = `
[
  {
    "stopTokens": [
      "x",
      "x",
      ";",
    ],
    "type": "until",
  },
]
`;

exports[`unified-latex-util-argspec > parses xparse argument specification string "v!" 1`] = `
[
  {
    "closeBrace": "!",
    "openBrace": "!",
    "type": "verbatim",
  },
]
`;
